--- a/package.json
+++ b/package.json
@@ -1,27 +1,43 @@
 {
-  "name": "quotec-frontend",
+  "name": "movies-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "format": "prettier --write .",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "cookie": "^0.6.0",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.314.0",
+    "next": "13.5.6",
+    "next-intl": "^3.5.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
+    "react-dom": "^18"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/cookie": "^0.6.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "13.5.6",
+    "husky": "^9.0.5",
     "postcss": "^8",
+    "prettier": "^3.2.4",
+    "pretty-quick": "^4.0.0",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "typescript": "^5"
   }
 }
